<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.lovable.app.WelcomeFragment"
        android:label="@string/welcome">
        <action
            android:id="@+id/action_welcome_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_welcome_to_signin"
            app:destination="@id/signInFragment" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.lovable.app.SignInFragment"
        android:label="@string/sign_in">
        <action
            android:id="@+id/action_signin_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.lovable.app.DashboardFragment"
        android:label="@string/dashboard">
        <action
            android:id="@+id/action_dashboard_to_chat"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.lovable.app.ChatFragment"
        android:label="@string/chat" />

</navigation>